# japanese-address-parser

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  rust-toolchain.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-city_orthographical_variant_report.yaml  02-town_orthographical_variant_report.yaml  99-default.md
.github/scripts/: build_demo_page.sh  free_test.js
.github/workflows/: code-check.yaml  code-quality-check.yaml  free-test.yaml  ghpages.yaml  python-build-check.yaml  run-test.yaml  rust.yaml  survey-python-build-check.yaml  unit-test.yaml  upload-cratesio.yaml  upload-npmjs.yaml  upload-pypi-org.yaml  wasm-pack-test.yaml
core/: Cargo.toml  LICENSE
core/benches/: core_benchmark.rs  orthographical_variant_adapter.rs
core/src/: api.rs  domain.rs  entity.rs  experimental.rs  formatter.rs  http.rs  interactor.rs  lib.rs  parser.rs  repository.rs  tokenizer.rs  util.rs
core/src/adapter/: orthographical_variant_adapter.rs
core/src/api/: city_master_api.rs  prefecture_master_api.rs
core/src/domain/: common.rs
core/src/domain/chimei_ruiju/: entity.rs  error.rs
core/src/domain/common/: latlng.rs  token.rs
core/src/domain/geolonia/: entity.rs  error.rs
core/src/experimental/: parse_with_chimeiruiju.rs  parse_with_geolonia.rs  parser.rs
core/src/formatter/: append_machi.rs  chome_with_arabic_numerals.rs  fullwidth_character.rs  halfwidth_character.rs  house_number.rs  informal_town_name_notation.rs  prepend_aza.rs  prepend_oaza.rs
core/src/http/: cached_client.rs  client.rs  error.rs  reqwest_client.rs
core/src/interactor/: chimei_ruiju.rs  geolonia.rs
core/src/parser/: adapter.rs  filter.rs  parse.rs  pure.rs  read_city.rs  read_town.rs
core/src/parser/adapter/: orthographical_variant_adapter.rs  vague_expression_adapter.rs
core/src/parser/filter/: non_kanji_block_number.rs
core/src/repository/: chimei_ruiju.rs  geolonia.rs
core/src/repository/chimei_ruiju/: city.rs  prefecture.rs  town.rs  util.rs
core/src/repository/geolonia/: city.rs  city_master_api.rs  prefecture.rs  prefecture_master_api.rs  util.rs
core/src/service/: chimei_ruiju.rs  geolonia.rs
core/src/tokenizer/: end.rs  read_city.rs  read_city_with_county_name_completion.rs  read_prefecture.rs  read_town.rs
core/src/util/: extension.rs  inmemory_cache.rs  sequence_matcher.rs  trimmer.rs
docs/: README.md
docs/flowcharts/: architecture.md  parsing-pipeline.md  tokenizer-states.md  town-matching.md  wrapper-integration.md
domain/: Cargo.toml
domain/src/: geolonia.rs
mcp/: Cargo.toml  LICENSE  README.md
mcp/src/: main.rs  server.rs
mcp/src/server/: process_address_list.rs  process_an_address.rs
pkg/: LICENSE  README.md  japanese_address_parser.d.ts  japanese_address_parser.js  japanese_address_parser_bg.wasm  japanese_address_parser_bg.wasm.d.ts  japanese_address_parser_debug.d.ts  japanese_address_parser_debug.js  japanese_address_parser_debug_bg.wasm  japanese_address_parser_debug_bg.wasm.d.ts  japanese_address_parser_nightly.d.ts  japanese_address_parser_nightly.js  japanese_address_parser_nightly_bg.wasm  japanese_address_parser_nightly_bg.wasm.d.ts  package.json
public/: debug.html  index.html  main.js  nightly.html  style.css  table_util.js
python/: Cargo.toml  README.md  japanese_address_parser_py.pyi  pyproject.toml
python/src/: lib.rs
python/tests/: test_async.py  test_bench_threading.py  test_parser.py
python/tests/fixtures/: addresses.py
repository/: Cargo.toml
repository/src/: city.rs  entity.rs  error.rs  geolonia.rs  lib.rs  prefecture.rs  service.rs  town.rs
repository/src/chimei_ruiju/: city.rs  prefecture.rs  town.rs
repository/src/geolonia/: city_master_api.rs  prefecture_master_api.rs
service/: Cargo.toml
service/src/: chimei_ruiju.rs  geolonia.rs  lib.rs
src/: api.rs  entity.rs  err.rs  lib.rs  parser.rs  wasm.rs
src/api/: blocking.rs  city_master_api.rs  client.rs  mock.rs  native.rs  prefecture_master_api.rs  wasm.rs
src/parser/: adapter.rs  api.rs  filter.rs  read_city.rs  read_house_number.rs  read_prefecture.rs  read_town.rs
src/parser/adapter/: orthographical_variant_adapter.rs
src/parser/filter/: fullwidth_character.rs  invalid_town_name_format.rs  non_kanji_block_number.rs
src/util/: converter.rs
tests/: Cargo.toml  addresses.csv  integration_tests.rs
tests/common/: mod.rs
tests/test_data/: 丁目が算用数字の場合への対応.csv  住居表示実施済みの住所において正式でない表記への対応.csv  大字表記省略への対応.csv  字・大字表記省略への対応.csv  市区町村名レベルでの表記ゆれ.csv  略字・俗字による表記揺れ.csv  異字体ではない表記ゆれへの対応.csv  異字体セレクタを含む場合への対応.csv  異字体旧字体への対応.csv  県庁所在地の住所データ.csv  郡が省略されている場合への対応.csv  郡名と町名が一致している場合.csv  類似する町名候補が複数ある場合への対応.csv
wasm/: Cargo.toml  LICENSE  README.md
wasm/src/: lib.rs  nightly.rs
wasm/src/nightly/: http_client.rs
