[workspace]
members = [
    "core",
    "wasm",
    "python",
    "tests",
    "domain",
]
resolver = "2"

[workspace.package]
version = "0.1.5"
edition = "2021"
description = "A Rust Library to parse japanese addresses."
repository = "https://github.com/YuukiToriyama/japanese-address-parser"
authors = ["Yuuki Toriyama <github@toriyama.dev>"]
license = "MIT"
keywords = ["parser", "geo", "wasm"]
categories = ["parser-implementations", "wasm"]

[workspace.dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-bindgen-test = "0.3.42"
