[workspace]
members = [
    "core",
    "wasm",
    "python",
    "tests",
]
resolver = "2"

[workspace.package]
version = "0.1.13"
edition = "2021"
description = "A Rust Library to parse japanese addresses."
repository = "https://github.com/YuukiToriyama/japanese-address-parser"
authors = ["Yuuki Toriyama <github@toriyama.dev>"]
license = "MIT"
keywords = ["parser", "geo", "wasm"]
categories = ["parser-implementations", "wasm"]

[workspace.dependencies]
serde = { version = "1.0.192", features = ["derive"] }
tokio = { version = "1.38.0", features = ["rt", "macros"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
wasm-bindgen-test = "0.3.42"
