[workspace]
members = [
    "core",
    "wasm",
    "python",
    "tests",
]
resolver = "2"

[workspace.package]
version = "0.2.7"
edition = "2021"
description = "A library for processing addresses of Japan"
repository = "https://github.com/YuukiToriyama/japanese-address-parser"
authors = ["Yuuki Toriyama <github@toriyama.dev>"]
license = "MIT"
keywords = ["parser", "geo", "wasm"]
categories = ["parser-implementations", "wasm"]

[workspace.dependencies]
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["rt", "macros"] }
wasm-bindgen = "0.2.97"
wasm-bindgen-futures = "0.4.47"
wasm-bindgen-test = "0.3.47"
