[package]
name = "japanese-address-parser"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
readme = "../README.md"
keywords.workspace = true
categories.workspace = true
rust-version = "1.75.0"

[lib]
crate-type = ["rlib", "cdylib"]

[features]
default = ["city-name-correction"]
blocking = ["reqwest/blocking"]
city-name-correction = []
format-house-number = []
eliminate-whitespaces = []
fix-halfwidth-katakana = []
experimental = ["fix-halfwidth-katakana"]

[dependencies]
log.workspace = true
rapidfuzz = "0.5.0"
regex = { version = "1.11.1", default-features = false, features = ["std", "unicode-perl"] }
serde.workspace = true
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
js-sys = "0.3.74"
thiserror = "2.0.3"
jisx0401 = "0.1.1"
strum = { version = "0.27.1", features = ["derive"] }
trait-variant = "0.1.2"

[dev-dependencies]
tokio.workspace = true
wasm-bindgen-test = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
mockito = "1.6.1" # mockitoがwasm32に対応していないため

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
