[package]
name = "python"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
pyo3 = { version = "0.21.0", features = ["abi3-py37"] }
