[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "japanese-address-parser-py"
# Cargo.toml のワークスペース設定から maturin が解決する
dynamic = ["version"]
keywords = ["converter", "utility", "geo", "rust"]
classifiers = [
    "Topic :: Text Processing",
    "Programming Language :: Rust",
    "Typing :: Typed",
]

[tool.maturin]
features = ["pyo3/extension-module"]
