[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "japanese-address-parser-py"
# Cargo.toml のワークスペース設定から maturin が解決する
dynamic = ["version"]
keywords = ["converter", "utility", "geo", "rust"]
classifiers = [
    "Topic :: Text Processing",
    "Programming Language :: Rust",
    "Typing :: Typed",
]

[tool.maturin]
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-benchmark>=5,<6",
]

[tool.pytest.ini_options]
# ベンチマークは外部 HTTP に依存するためデフォルトでは無効化する。
# 計測時は `--benchmark-enable` を付けて実行する。
addopts = "--benchmark-disable"
testpaths = ["tests"]
