[package]
name = "repository"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
domain = { path = "../domain" }
jisx0401 = "0.1.0-beta.2"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde = { workspace = true }

[dev-dependencies]
mockito = "1.4.0"
tokio = { version = "1.38.0", features = ["rt", "macros"] }
