[package]
name = "service"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
domain = { path = "../domain" }
reqwest = { version = "0.12.5", default-features = false, features = ["json", "rustls-tls", "blocking"] }
serde.workspace = true
