[package]
name = "tests"
version = "0.1.0-beta.8"
edition = "2021"
authors = ["Yuuki Toriyama <github@toriyama.dev>"]
publish = false

[[test]]
name = "integration_tests"
path = "integration_tests.rs"

[dev-dependencies]
csv = "1.3.0"
japanese-address-parser = { path = "../core"}
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.35.1", features = ["rt", "macros"] }
