[package]
name = "tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[[test]]
name = "integration_tests"
path = "integration_tests.rs"

[dev-dependencies]
csv = "1.3.0"
japanese-address-parser = { path = "../core"}
serde = { version = "1.0.197", features = ["derive"] }
tokio = { version = "1.37.0", features = ["rt", "macros"] }
