[package]
name = "tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[[test]]
name = "integration_tests"
path = "integration_tests.rs"

[dev-dependencies]
csv = "1.3.1"
japanese-address-parser = { path = "../core" }
serde.workspace = true
tokio.workspace = true
