[package]
name = "wasm"
version.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
debug = []

[dependencies]
console_error_panic_hook = "0.1.7"
japanese-address-parser = { path = "../core" }
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
