[package]
name = "wasm"
version.workspace = true
edition = "2021" # `wasm-bindgen`が2024に未対応なため
description.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]

[features]
debug = []
nightly = [
    "japanese-address-parser/format-house-number",
    "japanese-address-parser/eliminate-whitespaces",
    "japanese-address-parser/experimental",
    "dep:serde",
    "dep:log",
    "dep:console_log",
    "dep:gloo-net",
]

[dependencies]
console_error_panic_hook = "0.1.7"
japanese-address-parser = { path = "../core", features = ["enable-api-client-cache"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = { workspace = true }
wasm-bindgen-futures = { workspace = true }
# 以下は`nightly`が有効な場合のみ使用される
serde = { workspace = true, optional = true }
log = { workspace = true, optional = true }
console_log = { version = "1.0.0", features = ["color"], optional = true }
gloo-net = { version = "0.6.0", optional = true }
